# mcp-deepthinking

./: README.md  pyproject.toml
src/mcp_deepthinking/: __init__.py  __main__.py  server.py  settings.py
