[project]
authors = [{name = "jeongsk"}]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastmcp",
  "langchain-anthropic",
  "langchain-groq",
  "langchain-mcp-adapters",
  "langgraph",
  "logging",
  "mcp[cli]",
  "python-dotenv",
]
description = "MCP server providing a 'deepthinking' tool powered by Groq LLMs for complex reasoning."
keywords = ["mcp", "llm", "deepthinking"]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
name = "mcp-deepthinking"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.12"

[project.scripts]
mcp-deepthinking = "mcp_deepthinking:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv]
dev-dependencies = ["pyright", "ruff"]
