[project]
authors = [{name = "jeongsk"}]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastmcp>=2.10.5",
  "langchain-deepseek>=0.1.3",
  "langchain-groq>=0.3.6",
  "langchain-mcp-adapters>=0.1.9",
  "langchain-ollama>=0.3.4",
  "langgraph>=0.5.2",
  "logging>=0.4.9.6",
  "mcp[cli]>=1.11.0",
  "python-dotenv>=1.1.1",
]
description = "MCP server providing a 'deepthinking' tool powered by Groq LLMs for complex reasoning."
keywords = ["mcp", "llm", "deepthinking"]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
name = "mcp-deepthinking"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.12"

[project.scripts]
mcp-deepthinking = "mcp_deepthinking:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv]
dev-dependencies = ["pyright", "ruff"]
